--- a/web/console/public/webtty.html
+++ b/web/console/public/webtty.html
@@ -18,22 +18,12 @@
         overflow-y: hidden;
       }
     </style>
-    <link rel="apple-touch-icon" sizes="57x57" href="/static/image/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="/static/image/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/static/image/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/static/image/apple-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="/static/image/apple-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/static/image/apple-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/static/image/apple-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/static/image/apple-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/static/image/apple-icon-180x180.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/static/image/android-icon-192x192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/image/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="/static/image/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/image/favicon-16x16.png" />
+
+<link rel="icon" type="image/svg" sizes="32x32" href="/static/icon/favicon-32x32.svg" />
+<link rel="icon" type="image/svg" sizes="16x16" href="/static/icon/favicon-16x16.svg" />
+    
     <link rel="manifest" href="/static/image/manifest.json" />
     <meta name="msapplication-TileColor" content="#262626" />
-    <meta name="msapplication-TileImage" content="/static/image/ms-icon-144x144.png" />
     <meta name="theme-color" content="#262626" />
     <script src="/static/js/base64.min.js"></script>
     <script src="/static/js/xterm.js"></script>
