feat(console): support render template with config

--- a/web/console/public/webtty.tmpl.html
+++ b/web/console/public/webtty.tmpl.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>{{%.Title%}} WebTTY</title>
+  <title>{%.Title%} WebTTY</title>
   <link href="/static/css/xterm/xterm.css" rel="stylesheet" data-role="global" />
   <style>
     body {
